# Polygon

./: .gitignore  pyproject.toml
src/polygon/core/: simulation.py
src/polygon/models/: buffer.py  part.py  process.py  strategies.py
src/polygon/utils/: validators.py
