[project]
name = "Polygon"
version = "0.0.4a"
authors = "Alexandrov Andrey Sergeevich"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.4",
    "simpy>=4.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]
